1. 현재까지 작업한 내용 검증 2. util 디렉토리 생성해서 WCUtil 클래스 파일 추가 3. Makefile 일부 수정

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 .SUFFIXES = .cpp .o
 
-SRCS = $(wildcard *.cpp)
+SRCS = $(wildcard *.cpp util/*.cpp)
 #SRCH = $(SRCS:.cpp=.h)
 SRCH = *.h
 OBJS = $(SRCS:.cpp=.o)
@@ -30,7 +30,8 @@ $(TARGETS) : $(OBJS)
 	cp -f $(SRCH) $(DIR_INC)
 
 .cpp.o :
-	$(CXX) $< $(INC) $(CFLAGS)
+	$(CXX) $(INC) $(CFLAGS) $^ -o $@
+#	$(CXX) $< $(INC) $(CFLAGS)
 
 #정적LIB
 $(TARGETA) :
@@ -38,7 +39,11 @@ $(TARGETA) :
 
 #삭제
 clean :
-	rm -rf *.o *.bak *.log *.cache
+	find ./ -name "*.o" | xargs rm -f
+	find ./ -name "*.bak" | xargs rm -f
+	find ./ -name "*.log" | xargs rm -f
+	find ./ -name "*.cache" | xargs rm -f
+#	rm -rf *.o *.bak *.log *.cache
 
 #삭제-라이브러리
 cleanlib :
